projects/cms/portal/k8s-config/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cms-portal
  name: cms-portal-svc
  namespace: cms-prod
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cms-portal
